--- a/uwazitek/src/app/super-admin-dashboard/home-layout/home-layout.component.html
+++ b/uwazitek/src/app/super-admin-dashboard/home-layout/home-layout.component.html
@@ -1,6 +1,6 @@
   <div class="top-section">
       <div class="head-section">
-          <input type="text" class="search-bar" placeholder="Search here ..."[(ngModel)]="searchQuery" 
+          <input type="text" class="search-bar" placeholder="Search here ..." [(ngModel)]="searchQuery" 
           (input)="filterUsers()">
 
           <div class="notification-area">
@@ -11,7 +11,8 @@
 
       <div class="text-section">
           <p class="breadcrumbs">Dashboard <span>/ Overview</span></p>
-          <p class="welcome-text">Welcome back, {{userName}}</p>
+          <p class="welcome-text">Welcome back, Super Admin
+        </p>
       </div>
   </div>
 
@@ -21,7 +22,7 @@
           <div class="hospitals-card card">
               <div class="top-text">
                   <div class="left">
-                      <p class="numbers">138</p>
+                      <p class="numbers">10</p>
                   </div>
                   <div class="right">
                       <div class="count-area">
@@ -39,7 +40,7 @@
           <div class="insurances-card card">
               <div class="top-text">
                   <div class="left">
-                      <p class="numbers">105</p>
+                      <p class="numbers">15</p>
                   </div>
                   <div class="right">
                       <div class="count-area">
@@ -58,11 +59,11 @@
           <div class="invoices-card card">
               <div class="top-text">
                   <div class="left">
-                      <p class="numbers">1127</p>
+                      <p class="numbers">27</p>
                   </div>
                   <div class="right">
                       <div class="count-area">
-                          <p class="count">+115</p>
+                          <p class="count">+15</p>
                           <a href="/reports"><img src="assets/icons/link-out.svg" alt="" class="link-out"></a>
                       </div>
                       <p>in the last 30 days</p>
