--- a/uwazitek/src/app/super-admin-dashboard/hospital-organization/overview-hospital/overview-hospital.component.html
+++ b/uwazitek/src/app/super-admin-dashboard/hospital-organization/overview-hospital/overview-hospital.component.html
@@ -2,7 +2,13 @@
     <div class="head-section">
         <div class="text-section page-description">
             <p class="page-title">Hospital Overview</p>
-            <p class="breadcrumbs">Dashboard <span>/ Overview</span></p>
+        
+         <p class="breadcrumbs">
+        <a routerLink="/dashboard" routerLinkActive="active" class="dashboard-link">Dashboard</a> 
+         <span>/ Overview</span>
+        </p>
+                  
+                
         </div>
 
         <input type="text" class="search-bar" placeholder="Search here ...">
@@ -23,103 +29,45 @@
                     <p>Total No. of Hospitals</p>
                 </div>
                 <div class="bottom-text">
-                    <p>362</p>
+                    <p>12</p>
                 </div>
             </div>
 
             <div class="hospitals-card card">
                 <div class="top-text">
-                    <p>Total No. of Hospitals</p>
+                    <p>Total No. of Hospital Admins</p>
                 </div>
                 <div class="bottom-text">
-                    <p>362</p>
+                    <p>12</p>
                 </div>
             </div>
-
-
-            <div class="hospitals-card card">
-                <div class="top-text">
-                    <p>Total No. of Hospitals</p>
-                </div>
-                <div class="bottom-text">
-                    <p>362</p>
-                </div>
-            </div>
+            
         </div>
-
-        <input type="submit" value="Add Hospital +" id="add-hospital-button">
-
+    
+        <input type="submit" value="Add Hospital +" id="add-hospital-button" (click)="navigateToAddHospital()" >
 
 
     </div>
 
     <div class="table-area">
-        <!-- <div class="table-top">
-            <div class="left-area">
-                <p class="claim-head">Claim Requests</p>
-                <p class="claim-desc">Submitted by registered hospital admins</p>
-            </div>
-            <div class="right-area">
-                <p class="view-claims">View Claims</p>
-                <img src="./images/icons/link-out.svg" alt="" class="link-out">
-            </div>
-        </div> -->
-
         <table>
             <thead>
-                <tr>
-                    <th> <input type="checkbox" name="" id=""> </th>
-                    <th>Hospital Name</th>
-                    <th>Hospital Address</th>
-                    <th>Hospital Branch</th>
-                    <th>Hospital Category</th>
-                </tr>
+              <tr>
+                <th><input type="checkbox" name="" id="" /></th>
+                <th>Hospital Name</th>
+                <th>Email Address</th>
+                <th>Status</th>
+              </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td> <input type="checkbox" name="" id=""> </td>
-                    <td>Nairobi Hospital</td>
-                    <td>Nairobi</td>
-                    <td>Upperhill</td>
-                    <td>Private</td>
-                </tr>
-                <tr>
-                    <td> <input type="checkbox" name="" id=""> </td>
-                    <td>Nairobi Hospital</td>
-                    <td>Nairobi</td>
-                    <td>Upperhill</td>
-                    <td>Private</td>
-                </tr>
-                <tr>
-                    <td> <input type="checkbox" name="" id=""> </td>
-                    <td>Nairobi Hospital</td>
-                    <td>Nairobi</td>
-                    <td>Upperhill</td>
-                    <td>Private</td>
-                </tr>
-                <tr>
-                    <td> <input type="checkbox" name="" id=""> </td>
-                    <td>Nairobi Hospital</td>
-                    <td>Nairobi</td>
-                    <td>Upperhill</td>
-                    <td>Private</td>
-                </tr>
-                <tr>
-                    <td> <input type="checkbox" name="" id=""> </td>
-                    <td>Nairobi Hospital</td>
-                    <td>Nairobi</td>
-                    <td>Upperhill</td>
-                    <td>Private</td>
-                </tr>
-                <tr>
-                    <td> <input type="checkbox" name="" id=""> </td>
-                    <td>Nairobi Hospital</td>
-                    <td>Nairobi</td>
-                    <td>Upperhill</td>
-                    <td>Private</td>
-                </tr>
+              <tr *ngFor="let hospital of hospitalData ">
+                <td><input type="checkbox" name="" id="" /></td>
+                <td>{{ hospital.name }}</td>
+                <td>{{ hospital.email_address }}</td>
+                <td>{{ hospital.status }}</td>
+              </tr>
             </tbody>
-        </table>
+          </table>       
 
     </div>
 </div>
