--- a/uwazitek/src/app/hospital-admin-dashboard/claims/claims.component.html
+++ b/uwazitek/src/app/hospital-admin-dashboard/claims/claims.component.html
@@ -1,20 +1,40 @@
-<p>claims works!</p>
+<div class="main-container">
+  <h2>Create Claim</h2>
+<div class="form-container">
+  <form [formGroup]="claimsForm" (ngSubmit)="onSubmit()">
+    <div >
+      <label for="invoice_number">Invoice Number:</label>
+      <input id="invoice_number" formControlName="invoice_number"type="number" placeholder="Enter invoice number" />
+
+      <label for="insurance_id">Insurance Provider:</label>
+      <input id="insured_id" formControlName="insured_id"type="text" placeholder="Enter insurance"/>
+
+      <label for="treatment_id">Treatment:</label>
+      <input id="treatment_id" formControlName="treatment_id" type="text" placeholder="Enter Treatment" />
+
+      <label for="hospital_id">Hospital Name:</label>
+      <input id="hospital_id" formControlName="hospital_id" type="text"
+        placeholder="Enter hospital name" />
+
+      <label for="claim_narration">Procedure Done:</label>
+      <input id="claim_narration" formControlName="claim_narration"type="text" placeholder="Enter Procedure Done" />  
+    </div>
+
 <div class="upload-container">
-    <h2>Upload Invoice</h2>
-    <input
-      type="file"
-      (change)="onFileSelected($event)"
-      accept=".pdf" />
-    <div *ngIf="fileURL" class="preview">
-      <h3>Preview:</h3>
-      <iframe *ngIf="selectedFile?.type === 'application/pdf'" [src]="fileURL" width="100%" height="400px"></iframe>
-      <p *ngIf="selectedFile?.type !== 'application/pdf'">Preview not available for this file type.</p>
-    </div>
-    <button mat-raised-button color="primary" (click)="uploadFile()" [disabled]="!selectedFile">
-      Upload Invoice
-    </button>
-    <div *ngIf="feedbackMessage" class="feedback-message">
-      <p>{{ feedbackMessage }}</p>
-    </div>
-  
-  </div>
+  <p>Upload invoice</p>
+<input type="file"(change)="onFileSelected($event)"accept=".pdf" />
+<!--<div *ngIf="fileURL" class="preview">
+<p>Preview:</p>
+<iframe *ngIf="selectedFile?.type === 'application/pdf'" [src]="fileURL" width="100%" height="400px"></iframe>
+<p *ngIf="selectedFile?.type !== 'application/pdf'">Preview not available for this file type.</p>
+</div>-->
+<!--<button mat-raised-button color="primary" (click)="uploadFile()" [disabled]="!selectedFile"> Upload Invoice</button>-->
+<div *ngIf="feedbackMessage" class="feedback-message">
+<p>{{ feedbackMessage }}</p>
+</div>
+<div class="button-container">
+<button type="submit" id="submit-button" value="Submit Details"> Submit Details</button>
+</div>
+</div>
+</form>
+</div>
