--- a/uwazitek/src/app/super-admin-dashboard/admindashboard/admindashboard.component.html
+++ b/uwazitek/src/app/super-admin-dashboard/admindashboard/admindashboard.component.html
@@ -90,16 +90,15 @@
     </div>
 </div>
 <div class="content">
-
-    <app-home-layout *ngIf="usertype==='home-layout'"></app-home-layout>
-    <!--<app-overview-hospital *ngIf="usertype==='overview-hospital'"></app-overview-hospital>
+    <app-home-layout *ngIf="usertype && usertype==='home-layout'"></app-home-layout>
+    <app-overview-hospital *ngIf="usertype==='overview-hospital'"></app-overview-hospital>
     <app-addhospitalorganization *ngIf="usertype==='addhospitalorganization'"></app-addhospitalorganization>
     <app-overview-insurance *ngIf="usertype==='overview-insurance'"></app-overview-insurance>
     <app-add-insuranceorganization-details *ngIf="usertype==='add-insuranceorganization'"></app-add-insuranceorganization-details>
     <app-activity *ngIf="usertype==='activity'"></app-activity>
     <app-settings *ngIf="usertype==='settings'"></app-settings>
-    <app-logout-dialog *ngIf="usertype==='logout-dialog'"></app-logout-dialog>
+    <!-- <app-logout-dialog *ngIf="usertype==='logout-dialog'"></app-logout-dialog> -->
     <app-helpcenter *ngIf="usertype==='helpcenter'"></app-helpcenter>
     <app-profile *ngIf="usertype=== 'profile'"></app-profile>
--->
+
 </div>
